# luau-perf

./: .gitignore  Cargo.toml  LICENSE  README.md  RULES.md
.github/workflows/: ci.yml
src/: config.rs  fix.rs  fix_tests.rs  ignore.rs  lint.rs  main.rs  scanner.rs  visit.rs
src/rules/: alloc.rs  cache.rs  complexity.rs  instance.rs  math.rs  memory.rs  mod.rs  native.rs  network.rs  physics.rs  render.rs  roblox.rs  string.rs  style.rs  table.rs
src/rules/tests/: alloc_tests.rs  cache_tests.rs  complexity_tests.rs  instance_tests.rs  math_tests.rs  memory_tests.rs  native_tests.rs  network_tests.rs  physics_tests.rs  render_tests.rs  roblox_tests.rs  string_tests.rs  style_tests.rs  table_tests.rs
