[package]
name = "luauperf"
version = "0.1.11"
edition = "2021"
description = "A static performance linter for Luau"
license = "MIT"
repository = "https://github.com/bopmite/luau-perf"
readme = "README.md"
keywords = ["luau", "roblox", "linter", "performance"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "luauperf"
path = "src/main.rs"

[dependencies]
full_moon = { version = "2", features = ["luau"] }
walkdir = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
